--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
   "name": "vue-electron-starter",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.0.1",
+  "description": "Vue + Electron app boilerplate",
+  "keywords": [
+    "electron",
+    "rollup",
+    "vite",
+    "vue3",
+    "vue"
+  ],
+  "author": {
+    "name": "Yash Pal",
+    "email": "iyashpal.dev@gmail.com",
+    "url": "https://iyashpal.in"
+  },
+  "main": "dist-electron/main/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.2.37"
+    "preview": "vite preview",
+    "electron:build": "yarn build && electron-builder --config electron-builder.json"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "electron": "^21.2.0",
+    "electron-builder": "^23.6.0",
+    "lodash": "^4.17.21",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
+    "vite-electron-plugin": "^0.4.6",
+    "vite-plugin-electron-renderer": "^0.10.1",
+    "vue": "^3.2.37",
     "vue-tsc": "^0.40.4"
+  },
+  "debug": {
+    "env": {
+      "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344"
+    }
   }
 }
